--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaegassy/coc-ansible",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "ansible-language-server extension for coc.nvim",
   "author": "yaegassy <yosstools@gmail.com>",
   "license": "MIT",
@@ -46,8 +46,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.2.0",
     "rimraf": "^3.0.2",
-    "which": "^2.0.2",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "which": "^2.0.2"
   },
   "activationEvents": [
     "onLanguage:ansible",
