--- a/package.json
+++ b/package.json
@@ -193,6 +193,11 @@
             "string",
             "null"
           ]
+        },
+        "ansible.dev.serverPath": {
+          "type": "string",
+          "default": "",
+          "description": "Absolute path to ansible language server module. If it is not set, use the extention's server module. (For develop and check)"
         }
       }
     },
