--- a/package.json
+++ b/package.json
@@ -266,6 +266,6 @@
     ]
   },
   "dependencies": {
-    "@ansible/ansible-language-server": "^0.2.6"
+    "@ansible/ansible-language-server": "0.3.0"
   }
 }
