--- a/package.json
+++ b/package.json
@@ -195,7 +195,7 @@
         },
         "ansible.executionEnvironment.pullPolicy": {
           "scope": "resource",
-          "type": "array",
+          "type": "string",
           "enum": [
             "always",
             "missing",
