--- a/package.json
+++ b/package.json
@@ -209,7 +209,7 @@
           "scope": "resource",
           "type": "string",
           "default": "",
-          "description": "Path to the virtual environment activation script. Use only if you have a custom activation script. It will be sourced using bash before executing Ansible commands. If set, the Interpreter Path setting is ignored."
+          "description": "Path to the virtual environment activation script. Use only if you have a custom activation script. It will be sourced using bash before executing Ansible commands. When set, the Interpreter Path setting is ignored."
         },
         "ansible.python.interpreterPath": {
           "scope": "resource",
