--- a/package.json
+++ b/package.json
@@ -214,7 +214,7 @@
         "ansible.python.interpreterPath": {
           "scope": "resource",
           "type": "string",
-          "default": "python3",
+          "default": "",
           "description": "Path to the Python interpreter executable. Particularly important if you are using a Python virtual environment. Leave blank to use Python from PATH."
         },
         "ansible.dev.serverPath": {
