chore: add "contributes.rootPatterns" in package.json
"contributes.rootPatterns" is a setting unique to coc.nvim.

--- a/package.json
+++ b/package.json
@@ -105,6 +105,22 @@
     }
   ],
   "contributes": {
+    "rootPatterns": [
+      {
+        "filetype": "ansible",
+        "patterns": [
+          "ansible.cfg",
+          ".ansible-lint"
+        ]
+      },
+      {
+        "filetype": "yaml.ansible",
+        "patterns": [
+          "ansible.cfg",
+          ".ansible-lint"
+        ]
+      }
+    ],
     "configuration": {
       "type": "object",
       "title": "coc-ansible configuration",
