--- a/package.json
+++ b/package.json
@@ -54,6 +54,15 @@
     "onLanguage:yaml.ansible"
   ],
   "contributes": {
+    "jsonValidation": [
+      {
+        "fileMatch": [
+          ".ansible-navigator.json",
+          "ansible-navigator.json"
+        ],
+        "url": "https://raw.githubusercontent.com/ansible-community/schemas/main/f/ansible-navigator.json"
+      }
+    ],
     "yamlValidation": [
       {
         "fileMatch": [
