--- a/package.json
+++ b/package.json
@@ -300,6 +300,6 @@
     ]
   },
   "dependencies": {
-    "@ansible/ansible-language-server": "0.4.0"
+    "@ansible/ansible-language-server": "^0.5.0"
   }
 }
