--- a/package.json
+++ b/package.json
@@ -189,7 +189,7 @@
         "ansible.ansible.useFullyQualifiedCollectionNames": {
           "scope": "resource",
           "type": "boolean",
-          "default": true,
+          "default": false,
           "description": "Always use fully qualified collection names (FQCN) when inserting a module name. Disabling it will only use FQCNs when necessary."
         },
         "ansible.ansibleLint.arguments": {
