--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@types/node": "^16.11.36",
     "@types/rimraf": "^3.0.2",
-    "@types/which": "2.0.0",
+    "@types/which": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "coc.nvim": "^0.0.81-next.21",
