--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
-    "typescript": "~4.5.5",
+    "typescript": "^4.6.4",
     "which": "^2.0.2"
   },
   "activationEvents": [
