--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.8",
     "rimraf": "^3.0.2",
-    "typescript": "^4.9.4",
+    "typescript": "~5.0.4",
     "which": "^2.0.2"
   },
   "activationEvents": [
