--- a/package.json
+++ b/package.json
@@ -380,6 +380,7 @@
     ]
   },
   "dependencies": {
-    "@ansible/ansible-language-server": "^1.2.1"
-  }
+    "@ansible/ansible-language-server": "^1.2.3"
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
